Tweaking arena